# Vidooo

./: .gitignore  README.md  main.py  pyproject.toml
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  styles.css
rag-pipeline/: chunker.py  loader.py  vector_store.py
rag_pipeline/: chunker.py  embeddings.py  loader.py  qa_chains.py  retriever.py  vector_store.py
scripts/: ingest_vid.py  test_persistence.py
